# types/magosproject/v1alpha1/zz_generated.deepcopy.go
@@ -332,6 +332,62 @@ func (in *RolloutStrategy) DeepCopy() *RolloutStrategy {
 }
 
 // DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
+func (in *Run) DeepCopyInto(out *Run) {
+	*out = *in
+	if in.Plan != nil {
+		in, out := &in.Plan, &out.Plan
+		*out = new(RunPhaseSummary)
+		(*in).DeepCopyInto(*out)
+	}
+	if in.Apply != nil {
+		in, out := &in.Apply, &out.Apply
+		*out = new(RunPhaseSummary)
+		(*in).DeepCopyInto(*out)
+	}
+	if in.StartedAt != nil {
+		in, out := &in.StartedAt, &out.StartedAt
+		*out = (*in).DeepCopy()
+	}
+	if in.FinishedAt != nil {
+		in, out := &in.FinishedAt, &out.FinishedAt
+		*out = (*in).DeepCopy()
+	}
+}
+
+// DeepCopy is an autogenerated deepcopy function, copying the receiver, creating a new Run.
+func (in *Run) DeepCopy() *Run {
+	if in == nil {
+		return nil
+	}
+	out := new(Run)
+	in.DeepCopyInto(out)
+	return out
+}
+
+// DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
+func (in *RunPhaseSummary) DeepCopyInto(out *RunPhaseSummary) {
+	*out = *in
+	if in.StartedAt != nil {
+		in, out := &in.StartedAt, &out.StartedAt
+		*out = (*in).DeepCopy()
+	}
+	if in.FinishedAt != nil {
+		in, out := &in.FinishedAt, &out.FinishedAt
+		*out = (*in).DeepCopy()
+	}
+}
+
+// DeepCopy is an autogenerated deepcopy function, copying the receiver, creating a new RunPhaseSummary.
+func (in *RunPhaseSummary) DeepCopy() *RunPhaseSummary {
+	if in == nil {
+		return nil
+	}
+	out := new(RunPhaseSummary)
+	in.DeepCopyInto(out)
+	return out
+}
+
+// DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
 func (in *SourceSpec) DeepCopyInto(out *SourceSpec) {
 	*out = *in
 }
